start adding Swagger docs
