# docs/swagger.yaml
@@ -1,15 +1,272 @@
-basePath: /
-host: localhost:8080
+definitions:
+  main.ErrorJSON:
+    properties:
+      error_message:
+        type: string
+      event:
+        type: string
+    type: object
+  main.ProjectConfig:
+    properties:
+      devices_host:
+        type: string
+      selenium_hub_host:
+        type: string
+      selenium_hub_port:
+        type: string
+      selenium_hub_protocol_type:
+        type: string
+      wda_bundle_id:
+        type: string
+    type: object
+  main.SimpleResponseJSON:
+    properties:
+      event:
+        type: string
+      message:
+        type: string
+    type: object
+  main.SudoPassword:
+    properties:
+      sudo_password:
+        type: string
+    type: object
 info:
-  contact:
-    email: soberkoder@gmail.com
-    name: API Support
-  description: This is a sample service for managing orders
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: Orders API
-  version: "1.0"
-paths: {}
+  contact: {}
+paths:
+  /configuration/build-image:
+    post:
+      description: Starts building the 'ios-appium' image in a goroutine and just
+        returns Accepted
+      responses:
+        "202":
+          description: ""
+      summary: Build 'ios-appium' image
+      tags:
+      - configuration
+  /configuration/remove-image:
+    post:
+      description: Removes the 'ios-appium' Docker image
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.SimpleResponseJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorJSON'
+      summary: Remove 'ios-appium' image
+      tags:
+      - configuration
+  /configuration/remove-ios-listener:
+    post:
+      description: Deletes udev rules from /etc/udev/rules.d and reloads udev
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.SimpleResponseJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorJSON'
+      summary: Removes iOS device listener
+      tags:
+      - configuration
+  /configuration/set-sudo-password:
+    put:
+      consumes:
+      - application/json
+      description: Sets your sudo password in ./env.json. The password is needed for
+        operations requiring elevated permissions like setting up udev.
+      parameters:
+      - description: Sudo password value
+        in: body
+        name: config
+        required: true
+        schema:
+          $ref: '#/definitions/main.SudoPassword'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.SimpleResponseJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorJSON'
+      summary: Set sudo password
+      tags:
+      - configuration
+  /configuration/setup-ios-listener:
+    post:
+      description: Creates udev rules, moves them to /etc/udev/rules.d and reloads
+        udev. Copies usbmuxd.service to /lib/systemd/system and enables it
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.SimpleResponseJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorJSON'
+      summary: Sets up iOS device listener
+      tags:
+      - configuration
+  /configuration/update-config:
+    put:
+      consumes:
+      - application/json
+      description: Updates one  or multiple configuration values
+      parameters:
+      - description: Update config
+        in: body
+        name: config
+        required: true
+        schema:
+          $ref: '#/definitions/main.ProjectConfig'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.SimpleResponseJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorJSON'
+      summary: Update project configuration
+      tags:
+      - configuration
+  /containers/{container_id}/logs:
+    post:
+      description: Get logs of container by providing container ID
+      parameters:
+      - description: Container ID
+        in: path
+        name: container_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.SimpleResponseJSON'
+      summary: Get container logs
+      tags:
+      - containers
+  /containers/{container_id}/remove:
+    post:
+      description: Removes container by provided container ID
+      parameters:
+      - description: Container ID
+        in: path
+        name: container_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.SimpleResponseJSON'
+      summary: Remove container
+      tags:
+      - containers
+  /containers/{container_id}/restart:
+    post:
+      description: Restarts container by provided container ID
+      parameters:
+      - description: Container ID
+        in: path
+        name: container_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.SimpleResponseJSON'
+      summary: Restart container
+      tags:
+      - containers
+  /device-logs/{log_type}/{device_udid}:
+    get:
+      description: Get logs by type
+      parameters:
+      - description: Log Type
+        in: path
+        name: log_type
+        required: true
+        type: string
+      - description: Device UDID
+        in: path
+        name: device_udid
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.SimpleResponseJSON'
+      summary: Get logs for iOS device container
+      tags:
+      - device-logs
+  /ios_containers/{device_udid}/create:
+    post:
+      description: Creates a docker container for iOS device for provided device UDID
+      parameters:
+      - description: Device UDID
+        in: path
+        name: device_udid
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.SimpleResponseJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.SimpleResponseJSON'
+      summary: Create iOS container
+      tags:
+      - ios-devices
+  /ios_containers/update:
+    post:
+      description: Creates (or removes respectively) iOS containers based on the connected
+        and registered devices
+      parameters:
+      - description: Device UDID
+        in: path
+        name: device_udid
+        required: true
+        type: string
+      responses:
+        "202":
+          description: ""
+      summary: Update iOS containers
+      tags:
+      - ios-devices
 swagger: "2.0"
